--- a/CSS/CSS Assignment_Estey.css
+++ b/CSS/CSS Assignment_Estey.css
@@ -144,13 +144,6 @@ Finally, Rowe writes:
 It's clear that Rowe has read Schön's work and been influenced by it<a href="#10" id="f1" class="footnote">*</a>.<!--TODO needs number--> It appears as though <em> By Their Own Design</em>, by Suckle (1980) needs some looking into.
 </p1>
 
-<!-- Section for my general thought-->
-<h1>General Thoughts &amp; Back Matter</h1>
-<h2>As they happened</h2>
-<p1 class="zThoughts">
-It's clear that Rowe has read Schön's work and been influenced by it<a href="#*" id="f1" class="footnote">*</a>.<!--TODO needs number--> It appears as though <em> By Their Own Design</em>, by Suckle (1980) needs some looking into.
-</p1>
-
 
 <div class="fNotes">
   <h2>Footnotes</h2>
@@ -182,7 +175,7 @@ It's clear that Rowe has read Schön's work and been influenced by it<a href="#*
   <li id="9">
     <span class="zThoughts">This seems to me to be Rowe, saying that the medium of design cannot be separated entirely from the process. I think there is some relevance in this, in the that material and its place in culture will affect the production process as well as the object itself.</span>
   </li>
-  <li id="*">
+  <li id="10">
     See citations at start of section on page 34.
   </li>
 </ol>
